--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.38.2",
     "imagekit": "^6.0.0",
@@ -31,6 +32,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "resend": "^4.7.0",
