--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
@@ -25,8 +26,10 @@
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.38.2",
+    "html2canvas": "^1.4.1",
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.25",
