--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.38.2",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
